--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
     <link rel="icon" href="/crown.png" type="image/png">
     <link rel="apple-touch-icon" href="/crown.png">
 
+    <%# Font Awesome %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
@@ -24,6 +27,7 @@
   <body>
     <%= yield %>
     <% if current_user %>
+      <div class="bottom-spacer"></div>
       <%= render 'layouts/bottom_nav' %>
     <% end %>
   </body>
