improve flex box usage in profile

--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -260,8 +260,9 @@
   }
 
   .sport-splits-row {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     gap: 16px;
     margin-top: 12px;
     padding-top: 12px;
