--- a/app/views/home/week.html.erb
+++ b/app/views/home/week.html.erb
@@ -34,7 +34,7 @@
             <% end %>
             <div class="bet-grid">
               <div class="bet-description">
-                <%= sport_icon(bet.dk_game, bet.result) %>
+                <%= sport_icon(bet.dk_game, bet.result, bet) %>
                 <%= bet.formatted_description %>
               </div>
               <div class="bet-line"><%= bet.formatted_line %></div>
