add search to home page

--- a/app/views/home/_bet_card.html.erb
+++ b/app/views/home/_bet_card.html.erb
@@ -1,4 +1,4 @@
-<div class="bet-card">
+<div class="bet-card" data-away-team="<%= bet[:away_team] %>" data-home-team="<%= bet[:home_team] %>" data-league="<%= bet[:is_nfl] ? 'nfl' : 'ncaaf' %>">
   <div class="betting-grid">
     <!-- Labels Column -->
     <div class="bet-commence-time-wrapper">
